[package]
name = "cie_foreign_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.28.2", features = ["full"]}
tokio-util = {version = "0.7.8", features = ["compat"]}
tiberius = "0.12.2"
tokio-postgres = "0.7.8"
anyhow = "1.0.71"